# siscom-proxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
.github/: dependabot.yml
.github/workflows/: tests.yml
docker-files/: entrypoint.sh  telegraf.conf
k8s/: deployment.yaml
src/: config.rs  main.rs
src/app/: service.rs
src/domain/: message.rs
src/ports/: mod.rs  tcp_sender.rs  udp_receiver.rs
