[package]
name = "udp_tcp_proxy"
version = "0.1.0"
edition = "2021"
authors = ["Jesus Cabrera <jesus.cabrera@encontrack.com>"]
description = "Proxy UDP → TCP con arquitectura hexagonal en Rust"
license = "MIT"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
dotenvy = "0.15"  
once_cell = "1.19"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"