[package]
name = "siscom_proxy"
version = "0.1.0"
edition = "2021"
authors = ["Jesus Cabrera <jesus.cabrera@encontrack.com>"]
description = "Proxy UDP → TCP"
license = "MIT"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["net", "codec"] }
once_cell = "1.21.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
bytes = "1.10.1"
sentry = "0.41.0"
sentry-tracing = "0.41.0"
thiserror = "2.0.12"
futures-util = "0.3.31"
